syntax = "proto3";
package ueb02;

option go_package = "github.com/akelsch/vaa/ueb02/api/pb";

import "ControlMessage.proto";
import "ApplicationMessage.proto";
import "Rumor.proto";
import "Election.proto";

message Message {
  string sender = 1;
  oneof msg {
    ControlMessage control_message = 2;
    ApplicationMessage application_message = 3;
    Rumor rumor = 4;
    Election election = 5;
  }
}
